--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FirstHomeActivity">
-        </activity>
+        <activity android:name=".SuccesActivity"></activity>
+        <activity android:name=".FirstHomeActivity"></activity>
         <activity android:name=".PostDetailsActivity" />
         <activity android:name=".CategoriesActivity" />
         <activity android:name=".HomeActivity" />
@@ -20,7 +20,8 @@
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
