--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
 
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
+    implementation 'com.whiteelephant:monthandyearpicker:1.3.0'
 }
